--- a/package.json
+++ b/package.json
@@ -5,11 +5,16 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": ["api","http"],
+  "keywords": [
+    "api",
+    "http"
+  ],
   "author": "Kaleb Alebachew",
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "express": "^4.19.2"
+    "axios": "^1.7.7",
+    "express": "^4.19.2",
+    "winston": "^3.14.2"
   }
 }
