--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "type": "module",
   "name": "api-replay",
   "version": "1.0.0",
   "main": "index.js",
@@ -16,5 +17,8 @@
     "axios": "^1.7.7",
     "express": "^4.19.2",
     "winston": "^3.14.2"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.4"
   }
 }
