--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "axios": "^1.7.7",
     "express": "^4.19.2",
+    "retry": "^0.13.1",
     "winston": "^3.14.2"
   },
   "devDependencies": {
