--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "type": "module",
-  "name": "api-replay",
-  "version": "1.0.1",
+  "name": "request-replay",
+  "version": "1.0.0",
   "main": "index.js",
   "readme": "README.npm.md",
   "scripts": {
