chore: keywords added

--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
   },
   "keywords": [
     "api",
-    "http"
+    "http",
+    "request",
+    "request-replay"
+
   ],
   "author": "Kaleb Alebachew",
   "license": "ISC",
